[workspace]
resolver = "2"

members = ["onboard-computer", "power-system"]

[workspace.dependencies]
# requires `esp32s2-hal/embassy-time-timg0`!
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi", rev = "887eb22", version = "0.1", features = [
    "esp32c3",
    "wifi",
    "embassy-net",
    "embedded-svc",
] }

# debugging
esp-backtrace = { version = "0.9", features = [
    "esp32c3",
    "panic-handler",
    "print-uart",
] }
esp-println = { version = "0.7", features = ["esp32c3", "log"] }

log = "0.4"

# Allocator
# esp-alloc = { version = "0.3.0", features = ["oom-handler"] }

# Embassy
embassy-executor = { version = "0.3", features = [
    "nightly",
    "integrated-timers",
    "executor-thread",
] }
embassy-sync = { version = "0.4", features = ["nightly"] }
embassy-futures = { version = "0.1", features = [] }
# embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "fb27594", features = [
#     "nightly",
#     "defmt",
#     "udp",
#     "dhcpv4",
#     "medium-ethernet",
# ] }
# embassy-net = { version = "0.2", features = ["nightly", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-net = { version = "0.2", features = ["nightly", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
# embassy-net-driver = { git = "https://github.com/embassy-rs/embassy", rev = "fb27594" }
embassy-net-driver = { version = "0.2" }
embassy-time = { version = "0.1", features = ["nightly", "unstable-traits"] }
# embassy-net-driver = {  }
# embassy-embedded-hal = { version = "0.1", features = ["nightly"] }
embassy-embedded-hal = { version = "0.1", git = "https://github.com/embassy-rs/embassy", rev = "39c7371", features = ["nightly"]}


# Keep the same as in esp-wifi
embedded-svc = { version = "0.26", default-features = false, features = [
    "defmt",
] }

embedded-hal = { version = "0.2.7", features = ["unproven"] }
embedded-hal-1 = { version = "=1.0.0-rc.1", package = "embedded-hal" }
embedded-hal-async = { version = "=1.0.0-rc.1" }
embedded-hal-bus = { version = "=0.1.0-rc.1" }
embedded-hal-nb = { version = "=1.0.0-rc.1" }
# embedded-can = { version = "0.4.1" }
embedded-io-async = { version = "0.6", features = ["defmt-03"] }
embedded-io = { version = "0.6", features = ["defmt-03"] }

defmt = { version = "0.3" }
# defmt-rtt = "0.4.0"

# required for running tests
critical-section = { version = "1.1" }

nmea = { version = "0.6.0", default-features = false, features = ["all-sentences"] }

portable-atomic = { version = "1.5" }
static_cell = { version = "2", features = ["nightly"] }
# once_cell = { version = "1.0", default-features = false, features = ["critical-section"] }
fugit = { version = "0.3", features = ["defmt"] }

nb = { version = "1.1", features = ["defmt-0-3"] }
heapless = { version = "0.8", features = ["defmt-03"] }

[patch.crates-io]
hal = { package = "esp32c3-hal", version = "0.13", git = "https://github.com/esp-rs/esp-hal", rev = "ece40abaed0e642b751a8752ce6406740efa4af6" }
# hal = { package = "esp32c3-hal", version = "0.13", path = "../esp-hal/esp32c3-hal" }

# embassy-executor = { version = "0.3", git = "https://github.com/embassy-rs/embassy", rev = "39c7371" }
embassy-net = { version = "0.2", git = "https://github.com/embassy-rs/embassy", rev = "39c7371" }
embassy-time = { version = "0.1", git = "https://github.com/embassy-rs/embassy", rev = "39c7371" }
embassy-sync = { version = "0.4", git = "https://github.com/embassy-rs/embassy", rev = "39c7371" }

# embassy-embedded-hal = { version = "0.1", git = "https://github.com/embassy-rs/embassy", rev = "39c7371" }

# bmp388 = { version = "0.1", path = "../bmp388" }
# rev `d277bae` is the commit that merges `feat/embedded-hal-async-traits`
bmp388 = { version = "0.1", git = "https://github.com/ibutra/bmp388", rev = "d277bae" }

nmea = { version = "0.6.0", git = "https://github.com/AeroRust/nmea", branch = "fix/gsa-fix-sats-prn-size" }
