
[profile.release]
# High level of Debug symbols
# debug = 2

# No debug symbols
# debug = false

# Optimization settings w/out debug symbols

opt-level = 3
strip = false
# debug = false
# With debug symbols
debug = 2
codegen-units = 1
lto = true

[workspace]
resolver = "2"

members = ["onboard-computer", "power-system", "onboard-computer/protocol", "onboard-computer/esp32c3", "onboard-computer/pico-w", "lc76g"]

[workspace.dependencies]
# requires `esp32s2-hal/embassy-time-timg0`!
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi", rev = "887eb22", version = "0.1", features = [
    "esp32c3",
    "wifi",
    "embassy-net",
    "embedded-svc",
] }

# debugging
esp-backtrace = { version = "0.10", features = [
    "esp32c3",
    "panic-handler",
    "print-uart",
] }
esp-println = { version = "0.8", features = ["esp32c3", "log"] }
# Allocator
# esp-alloc = { version = "0.3.0", features = ["oom-handler"] }

# RP2040
cortex-m = { version = "0.7" }
# Require 0.7.3 because of <https://github.com/rust-embedded/cortex-m/discussions/469>
cortex-m-rt = { version = "0.7.3" }
panic-probe = "0.3"

# Embassy Pico HAL
embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "c1ba008", features = [
    "unstable-pac",
    "time-driver",
] }
# Pico W WiFi
cyw43 = { git = "https://github.com/embassy-rs/embassy", rev = "c1ba008", features = ["firmware-logs"] }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy", rev = "c1ba008", features = ["overclock"] }

# Embassy
embassy-executor = { version = "0.5", features = [
    "integrated-timers",
    "executor-thread",
] }
embassy-sync = { version = "0.5" }
embassy-futures = { version = "0.1", features = [] }
embassy-net = { version = "0.4", features = ["tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-net-driver = { version = "0.2" }
embassy-time = { version = "0.3" }
embassy-embedded-hal = { version = "0.1" }


# Keep the same as in esp-wifi
embedded-svc = { version = "0.26", default-features = false, features = [
    "defmt",
] }

embedded-hal-02 = { version = "0.2.7", features = ["unproven"], package = "embedded-hal" }
embedded-hal = { version = "1.0" }
embedded-hal-async = { version = "1.0" }
embedded-hal-bus = { version = "0.1.0" }
embedded-hal-nb = { version = "1.0.0" }
embedded-storage = "0.3"
# embedded-can = { version = "0.4.1" }
embedded-io-async = { version = "0.6", features = ["defmt-03"] }
embedded-io = { version = "0.6", features = ["defmt-03"] }

log = "0.4"
defmt = { version = "0.3" }
defmt-rtt = "0.4.0"

serde = { version = "1", default-features = false }
postcard = { version = "1" }
postcard-rpc = { version = "0.3" }

# required for running tests
critical-section = { version = "1.1" }

nmea = { version = "0.6.0", default-features = false, features = ["all-sentences"] }

portable-atomic = { version = "1.6", default-features = false }
static_cell = { version = "2", features = ["nightly"] }
# once_cell = { version = "1.0", default-features = false, features = ["critical-section"] }
fugit = { version = "0.3", features = ["defmt"] }

nb = { version = "1.1", features = ["defmt-0-3"] }
heapless = { version = "0.8", features = ["defmt-03"] }

dotenv = "0.15"

# Sensors
# Humidity and temperature
shtcx = { version = "0.11" }
# Pressure and temperature sensor
bmp388 = { version = "0.1", features = ["asynch"] }
# air quality
bme68x-rust = { version = "0.1" }
bno055 = { version = "0.3" }

# VOC index
sgp40 = "0.0.4"
icm42670 = { version = "0.1.1" }
lc76g = { path = "./lc76g", version = "0.1" }

[patch.crates-io]
hal = { package = "esp32c3-hal", version = "0.15", path = "../esp-hal/esp32c3-hal" }

embassy-executor = { version = "0.5", git = "https://github.com/embassy-rs/embassy", rev = "c1ba008" }
embassy-net = { version = "0.4", git = "https://github.com/embassy-rs/embassy", rev = "c1ba008" }
embassy-time = { version = "0.3", git = "https://github.com/embassy-rs/embassy", rev = "c1ba008" }
embassy-time-driver = { version = "0.1", git = "https://github.com/embassy-rs/embassy", rev = "c1ba008" }
embassy-sync = { version = "0.5", git = "https://github.com/embassy-rs/embassy", rev = "c1ba008" }
embassy-embedded-hal = { version = "0.1", git = "https://github.com/embassy-rs/embassy", rev = "c1ba008" }

# embassy-embedded-hal = { version = "0.1", git = "https://github.com/embassy-rs/embassy", rev = "c1ba008" }

# IMU that comes on the ESP32-C3-Rust board
icm42670 = { version = "0.1.1", git = "https://github.com/LechevSpace/icm42670", branch = "feat/embedded-hal-async-rc" }
# icm42670 = { version = "0.1.1", path = "../../icm42670" }

# rev `ae84c82` is the commit that merges `embedded-hal@1.0` traits
bmp388 = { version = "0.1", git = "https://github.com/ibutra/bmp388", rev = "ae84c82" }
# bmp388 = { version = "0.1", path = "../bmp388" }
bno055 = { version = "0.3", git = "https://github.com/LechevSpace/bno055", branch = "all-changes" }
# bno055 = { version = "0.3", path = "../bno055" }
nmea = { version = "0.6.0", git = "https://github.com/AeroRust/nmea", branch = "feat/defmt" }
