[package]
name = "nanosat"
version = "0.1.0"
authors = ["Lechev.space <dev@lechev.space>, Lachezar Lechev <elpiel93@gmail.com>"]
license = "MIT OR Apache-2.0"

edition = "2021"
publish = false

[features]
default = []
# std = ["once_cell/std"]

[dependencies]
static_cell.workspace = true
# once_cell = { version = "1", default-features = false, features = ["critical-section", "atomic-polyfill"] }