[package]
name = "onboard-computer"
version = "0.1.0"
authors = ["Lechev.space <dev@lechev.space>, Lachezar Lechev <elpiel93@gmail.com>"]
license = "MIT OR Apache-2.0"

edition = "2021"
publish = false

[features]
default = ["embassy-time-systick", "riscv", "run-gnss", "run-pressure-and-temperature"]
# default = ["riscv"]

# Enables the GNSS receiver in code
run-gnss = []

# TODO: Add `run-humidity-and-temperature` once there is support for Async
run-sensors = ["run-imu", "run-pressure-and-temperature"]
# Enables the IMU sensor readings (icm42670)
run-imu = []

# Enables the Humidity + Temperature sensor readings (shtc3)
run-humidity-and-temperature = []

# Enables the Pressure + Temperature sensor readings (BMP388)
run-pressure-and-temperature = []

embassy-time-systick = ["hal/embassy-time-systick", "embassy-time/tick-hz-16_000_000"]
embassy-time-timg0 = ["hal/embassy-time-timg0", "embassy-time/tick-hz-1_000_000"]

# wifi = ["esp-wifi"]

std = ["embassy-executor/arch-std", "critical-section/std"]
# std = ["embassy-executor/arch-std", "once_cell/std", "critical-section/std"]
riscv = ["embassy-executor/arch-riscv32"]

[dependencies]
hal = { package = "esp32c3-hal", version = "0.13", features = [
    "rt",
    "embassy",
    "eh1",
    "vectored",
    "async",
    "portable-atomic",
    # "atomic-emulation"
] }

nmea = { workspace = true, features = ["all-sentences"] }
# IMU that comes on the ESP32-C3-Rust board
icm42670 = { version = "0.1.1", path = "../../icm42670" }
shtcx = "0.11"
# enable async version
bmp388 = { version = "0.1", features = ["nightly"] }

# debugging
esp-backtrace.workspace = true
esp-println.workspace = true
log.workspace = true

# Allocator
# esp-alloc.workspace = true

# esp-wifi = { workspace = true, optional = true }
# Keep the same as in esp-wifi
# embedded-svc = { workspace = true, optional = true }

embassy-executor = { workspace = true, features = ["nightly", "integrated-timers", "executor-thread"] }
embassy-sync.workspace = true
embassy-futures.workspace = true
embassy-net.workspace = true
embassy-net-driver.workspace = true
embassy-time.workspace = true
embassy-embedded-hal.workspace = true

embedded-hal.workspace = true
embedded-hal-1.workspace = true
embedded-hal-async.workspace = true
embedded-hal-nb.workspace = true
embedded-hal-bus.workspace = true
# embedded-can.workspace = true
embedded-io-async.workspace = true
embedded-io.workspace = true

static_cell.workspace = true
# once_cell = { version = "1.17", default-features = false, features = ["critical-section", "atomic-polyfill"] }

critical-section = { workspace = true }
nb.workspace = true
heapless.workspace = true

fugit.workspace = true

# Patch for esp32c3 hal crate
portable-atomic = { workspace = true, features = ["unsafe-assume-single-core"] }
# defmt-rtt.workspace = true
# defmt.workspace = true

# [patch.crates-io]

# icm42670 = { version = "0.1", path = "../icm42670" }